# georgian-civil-code-rag-agent

./: .gitignore  Dockerfile  README.md  app.py  preprocessing-civil-code.ipynb  preprocessing.py  pyproject.toml
